# learn-opengl

./: .gitignore  Makefile  meson.build
shaders/: cube.frag  cube.vert  lightsource.frag  lightsource.vert  triangle.frag  triangle.vert
src/: camera.hpp  main.cpp  material.hpp  shader.cpp  shader.hpp
